--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -36,9 +36,9 @@
 
 		accent1: (
 			bg:				#e54b46,
-			fg:				mix(#4696e5, #ffffff, 25%),
+			fg:				mix(#59e546, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#4696e5, #ffffff, 40%),
+			fg-light:		mix(#c3e546, #ffffff, 40%),
 			border:			rgba(255,255,255,0.25),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(255,255,255,0.5),
